--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "docx": "^7.7.0",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
