--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "description": "Better Blinkist",
   "content_scripts": [
     {
-      "matches": ["https://*.blinkist.com/*"],
+      "matches": ["https://*.blinkist.com/*/nc/highlights"],
       "js": ["index.js"],
       "css": ["styles.css"]
     }
